# ocaml-xi-rope

./: .gitattributes  .gitignore  .merlin  .ocamlinit  .travis.yml  README.md  _tags  xi-rope.opam
demo/: dune  notty_demo.ml
lib/: dune  xi_crdt.ml  xi_crdt.mli  xi_rope.mllib  xi_rope_top.ml
pkg/: META  pkg.ml
tests/: dune  test_xi_crdt.ml  tests.ml
