opam-version: "2.0"
name:         "xi-rope"
homepage:     "https://github.com/cfcs/ocaml-xi-rope"
dev-repo:     "git+https://github.com/cfcs/ocaml-xi-rope.git"
bug-reports:  "https://github.com/cfcs/ocaml-xi-rope/issues"
doc:          "https://cfcs.github.io/ocaml-xi-rope/doc"
author:       ["cfcs"]
maintainer:   ["cfcs"]
license:      "AGPL"

build: [
  ["ocaml" "pkg/pkg.ml" "build" "--pinned" "%{pinned}%"]
  ["ocaml" "pkg/pkg.ml" "build" "--pinned" "%{pinned}%" "--tests" "true"] {with-test}
  ["ocaml" "pkg/pkg.ml" "test"] {with-test}
]

depends: [
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "topkg" {build}

  "odoc" {doc}

  "fmt"      { >= "0.8.5"  &  < "0.9.0" }
  "logs"     { >= "0.6.2"  &  < "0.7.0" }
  "pvec"
  "rresult"  { >= "0.6.0"  &  < "0.7.0" }

  "qcheck" {test}
  "alcotest" {test}
]
available: [ ocaml >= "4.04.0" ]
